# kicker-elo-matchmaker

./: .gitignore  .pre-commit-config.yaml  README.md  run  start.sh
.github/workflows/: ci.yml  deploy.yml
backend/: migrate_user_columns.py  pyproject.toml
backend/src/kicker/: auth.py  bootstrap.py  config.py  db.py  elo.py  main.py  models.py  schemas.py  seed_public.py
backend/src/kicker/routers/: auth.py  balance.py  matches.py  organizations.py  settings_router.py  stats.py  users.py
backend/src/kicker/scripts/: migrate_orgs.py  migrate_twovone.py  seed_public.py
backend/tests/: conftest.py  test_auth.py  test_elo.py  test_matches.py  test_public_mode.py  test_stats.py  test_users.py
deploy/: README.md
deploy/nginx/: kicker.conf
deploy/scripts/: backup-sqlite.sh
deploy/systemd/: kicker.service
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css  main.tsx  theme.ts
frontend/src/admin/: AdminUsersPage.tsx  EditUserDialog.tsx
frontend/src/api/: client.ts  hooks.ts  types.ts
frontend/src/auth/: LoginPage.tsx  SetPasswordPage.tsx
frontend/src/components/: Modal.tsx
frontend/src/layout/: AppLayout.tsx
frontend/src/match/: Avatar.tsx  MatchBuilderPage.tsx  MatchCard.tsx  RosterTile.tsx  ScoreEntry.tsx  SessionHistory.tsx  SettingsModal.tsx  Slot.tsx  elo.ts  store.ts
frontend/src/stats/: GamesListPage.tsx  StatsPage.tsx  UserProfilePage.tsx
frontend/src/utils/: date.ts  session.ts
