[project]
name = "kicker"
version = "0.1.0"
description = "Foosball/kicker Elo rating app — backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.5",
    "argon2-cffi>=23.1",
    "python-multipart>=0.0.12",
    "pillow>=10.4",
    "itsdangerous>=2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kicker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
# B008: FastAPI uses `Depends(...)` / `Query(...)` etc. in defaults by design.
ignore = ["B008"]
